# headroom-stats

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.agents/skills/documentation/: SKILL.md
.agents/skills/git/: SKILL.md
.agents/skills/writing-voice/: SKILL.md
.github/workflows/: release.yml
src/: app.rs  client.rs  main.rs  model.rs  ui.rs
